--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
        </div>
        <footer>
-        feito com ódio pelo <a href="https://www.instagram.com/luiz_ferrl" target="_blank">luizin capudo</a>
+        feito por <a href="https://www.instagram.com/luiz_ferrl" target="_blank">luiz_ferrl</a>
        </footer>
     </div>
     <script
